applied server api in Topbar

--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-# BACK_END_API = 'https://jjck-realty-services-admin.onrender.com'
-BACK_END_API = 'http://localhost:3001'
+BACK_END_API = 'https://jjck-admin-server-testing.onrender.com'
+# BACK_END_API = 'http://localhost:3001'
