updated password in env from clever-cloud

--- a/server/.env
+++ b/server/.env
@@ -6,7 +6,7 @@
 FRONT_END_API = 'https://jjck-admin-client-testing.onrender.com'
 HOST = 'b4svrhz1pxumygusk30q-mysql.services.clever-cloud.com'
 USER = 'uvxa2eya4zuwpvll'
-PASSWORD = 'SWphMgAOhgHQqaIMF7PC'
+PASSWORD = 'Q2SvUshnXekmsts9M2as'
 DATABASE = 'b4svrhz1pxumygusk30q'
 PORT = 3001
 
